# ButterTemplate

./: .breakpoints  .gitignore  README.md  main.py  pyproject.toml
Requirements/: requirements.txt
website/: __init__.py  auth.py  database.db  forms.py  models.py  views.py
website/static/: rs1.css
website/templates/: adlogin.html  adsign_up.html  base.html  home.html  login.html  sign_up.html
website/templates/switches/: companySwitch.html  personalSwitch.html  switch1.html
