[tool.poetry]
name = "buttertemplate"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flask-login = "^0.5.0"
flask-sqlalchemy = "^2.5.1"
sqlalchemy = "^1.4.7"
website = "^1.1"
werkzeug = "^1.0.1"
Flask-WTF = "^1.0.0"
WTForms = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
