[tool.poetry]
name = "repl_python3_ButterTemplate"
version = "0.1.0"
description = ""
authors = ["Insensual <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask-Login = "^0.6.0"
Flask-SQLAlchemy = "^2.5.1"
SQLAlchemy = "^1.4.35"
Werkzeug = "^2.1.1"
Flask = "^2.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
